# rudn-year3-fsm

./: .gitignore  Cargo.toml  Dockerfile  build.py  docker-compose.yml
.github/workflows/: static.yml  trunk-frontend.yaml
api/: Cargo.toml
api/src/: lib.rs
backend/: .env  Cargo.toml
backend/migrations/: 20231118174201_add_user_data.sql  20231118211905_add_tasks_tables.sql  20231119183049_add_user_submissions.sql  20231119212854_add_simple_tasks.sql  20231121110747_add_main_tasks.sql  20231205133242_add_more_complicated_tasks.sql
backend/src/: main.rs  others_submissions.rs  result.rs  submit.rs  task.rs  user_token.rs
contest/: grader.py  no_three_zeros_testgen.py
contest/no_three_zeros/: addtests.py
frontend/: Cargo.toml  Dockerfile  Trunk.toml  docker-compose.yml  index.html
frontend/js_src/elements/: link.js
frontend/js_src/main/: fsm.js
frontend/src/: canvas.rs  canvas_player.rs  editor.rs  leaderboard.rs  main.rs  profile.rs  scripter.rs  submission_view.rs  task.rs  task_list.rs  tutorial.rs  user_page.rs
frontend/src/canvas/: any_link.rs  node.rs  normal_link.rs  self_link.rs  start_link.rs  temp_link.rs  utils.rs
fsm/: Cargo.toml
fsm/src/: fsm.rs  lib.rs  tester.rs
src/main/: fsm.js  save.js
www/: index.html
