[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.2", features = ["sqlite", "tls-none", "runtime-tokio"] }
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing-subscriber = "0.3.18"
api = {path = "../api"}
rand = "0.8.5"
