[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
reqwest = { version = "0.11.22", features = ["json"] }
wasm-bindgen = "0.2.88"
web-sys = { version = "0.3.65", features = ["CanvasRenderingContext2d", "TextMetrics", "DomRect", "Element", "HtmlCanvasElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-autoprops = "0.3.0"
yew-bootstrap = "0.7.0"
yew-hooks = "0.3.0"
yew-router = "0.18.0"
api = {path = "../api"}
shadow-clone = "1.2.1"
fsm = {path = "../fsm"}
serde_json = "1.0.108"
wasm-logger = "0.2.0"
log = "0.4.20"
rand = { version = "0.8.5", default-features = false }
rand_chacha = "0.3.1"
anyhow = "1.0.75"
derive_more = "0.99.17"
