[package]
name = "fsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
petgraph = "0.6.4"
rand = { version = "0.8.5", default-features = false }
rand_chacha = "0.3.1"
rhai = { version = "1.16.3", features = ["sync"] }
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"
